# feishu2everywhere

./: .gitignore  LICENSE  pyproject.toml  try.py
feishu2everywhere_rs/: Cargo.toml
feishu2everywhere_rs/src/: block.rs  log.rs  main.rs  poll_keys.rs  to_markdown.rs  webelement_ext.rs
oldpy/: .gitignore  README.md  main.py
prepare/: install_chrome.py
