[package]
name = "feishu2everywhere_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thirtyfour = "0.30.0"
tokio = { version = "1.39.0", features = ["full"] }
base64 = "0.21.0"
device_query = "3.0.1"
async-recursion = "0.1.0"
crossterm = "0.29.0"
chrono = "0.4.31"
sha2 = "0.10.9"
reqwest = { version = "0.12.10", features = ["json"] }
# use async_recursion::async_recursion;b